@@ -1,3 +1,7 @@
+2025-08-31  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated OpenLibrary source to update via OLID, if available (Bug 508897).
+
 2025-08-30  Robby Stephenson  <robby@periapsis.org>
 
 	* Added KDE shortcut keys for previous/next tab (Bug 508789).
